# yeli-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  riscv64-yeli_os.json  runner.sh  rustfmt.toml
.cargo/: config.toml
bootloader/: Cargo.toml
fs/: Cargo.toml  Makefile
fs/src/: block_cache.rs  block_dev.rs  buffer_cache.rs  file.rs  helpers.rs  inode.rs  lib.rs
fs/tests/: dinode_test.rs  fs_test.rs  helpers.rs  integration_test.rs
fs/tests/common/: block_file.rs  mod.rs
kernel/: Cargo.toml  Makefile  linker.ld  rustfmt.toml
kernel/.cargo/: config.toml
kernel/src/: console.rs  lang_items.rs  lib.rs  logger.rs  main.rs  panic.rs
kernel/src/boot/: entry.S
kernel/src/drivers/: mod.rs
kernel/src/drivers/virtio/: mod.rs
kernel/src/drivers/virtio/virtio_blk/: mod.rs
kernel/src/interrupt/: mod.rs
kernel/src/intr/: kernelvec.S  mod.rs  plic.rs  timer.rs  trampoline.S  trap.rs
kernel/src/mem/: address.rs  mod.rs
kernel/src/mem/allocator/: buddy_allocator.rs  bump_allocator.rs  list_allocator.rs  mod.rs  slab_allocator.rs
kernel/src/mem/page/: mod.rs  page_size.rs  page_table.rs
kernel/src/proc/: backtrace.rs  context.rs  mod.rs  switch.S  task.rs  task_list.rs  task_manager.rs
kernel/src/sync/: mod.rs  once_cell.rs
kernel/src/syscall/: mod.rs  sbi.rs
kernel/tests/: basic_boot.rs
scripts/: run.sh
src/: config.rs  console.rs  init.rs  lang_items.rs  lib.rs  linker.ld  logger.rs  main.rs  vga_buffer.rs
src/boot/: entry.S  entry.asm  linker.ld
src/interrupt/: context.rs  handler.rs  mod.rs  timer.rs
src/mem/: address.rs  heap.rs  mod.rs  segment.rs
src/mem/alloc/frame/: mod.rs  stack.rs
src/mem/allocator/: buddy_allocator.rs  bump_allocator.rs  list_allocator.rs  mod.rs
src/mem/allocator/frame/: mod.rs  stack.rs
src/mem/page/: frame.rs  mod.rs  page_size.rs  page_table.rs  table.rs
src/memory/: address.rs  config.rs  frame.rs  heap.rs  mod.rs  page.rs  segment.rs
src/memory/allocator/frame/: mod.rs  stack.rs
src/memory/page/: frame.rs  mod.rs  table.rs
src/mm/: address.rs  heap.rs  mod.rs  page.rs
src/platform/qemu/: linker.ld
src/proc/: context.rs  mod.rs  proc.rs  switch.asm  switch.rs  task_manager.rs  trampoline.S
src/syscall/: mod.rs  sbi.rs
src/task/: mod.rs
src/utils/: console.rs  logger.rs  mod.rs  range.rs
syscall/: Cargo.toml
syscall/src/: lib.rs  sbi.rs
tests/: basic_boot.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
