[package]
name = "yeli-os"
version = "0.1.0"
authors = ["YeLi <i@yeli.io>"]
edition = "2018"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

# It's already configured in target.json. If repeat it here
# `cargo test` will fail. See at
# https://github.com/phil-opp/blog_os/issues/840
# 
# [profile.dev]
# panic = "abort"
# 
# [profile.release]
# panic = "abort"

[dependencies]
# A BIOS boot loader implmented by rust and inline assembly
bootloader = "0.9.8"

# This crate provides a Volatile wrapper type with read and write methods.
# These methods guarantee that the reads/writes are not optimized away.
volatile = "0.2.6"

spin = "0.9.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
