[package]
name = "yeli-os"
version = "0.1.0"
authors = ["YeLi <i@yeli.io>"]
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { version = "0.8.0" }

# This crate provides a Volatile wrapper type with read and write methods.
# These methods guarantee that the reads/writes are not optimized away.
volatile = "0.4.5"

spin = "0.9.2"
log = "0.4.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.0"
bitflags = "1.3.2"
bit_field = "0.10.1"
