[package]
name = "fs"
version = "0.1.0"
authors = ["YeLi <i@yeli.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.14"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name = "mkfs"
doc = false
