[package]
name = "fs"
version = "0.1.0"
authors = ["YeLi <i@yeli.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"
assert_cmd = "2.0.16"
predicates = "3.1.2"
rand = "0.8.5"

[[bin]]
name = "mkfs"
doc = false
