[package]
name = "yeli-os"
version = "0.1.0"
authors = ["YeLi <i@yeli.io>"]
edition = "2018"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This crate provides a Volatile wrapper type with read and write methods.
# These methods guarantee that the reads/writes are not optimized away.
volatile = "0.2.6"

spin = "0.9.2"
log = "0.4.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { version = "0.7.0", features = ["inline-asm"] }
