[package]
name = "yeli-os"
version = "0.1.0"
authors = ["YeLi <i@yeli.io>"]
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall = { version = "0.1.0", path = "../syscall" }
fs = { version = "*", path = "../fs" }

riscv = { version = "0.12.1" }
spin = "0.9.8"
log = "0.4.22"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
bitflags = "2.6.0"
bit_field = "0.10.1"
dtb = "0.2.0"
